[UPDATE] TenantController GetAvailableTenants
